aggiustata documentazione e struttura

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 
 <body>
   <h1>Shadows, gradients &amp; animations</h1>
+
+  <!-- start first section (box-shadow) -->
+  <section id="section-box-shadow">
+    <h2>Box-shadows</h2>
+    <div class="box shadow"></div>
+    <div class="box shadows"></div>
+  </section>
+  <!-- end first section (box-shadow) -->
+
+  <!-- start second section (text-shadow) -->
+  <section id="section-text-shadow">
+    <h2>Text-shadow</h2>
+    <p class="text-shadow">Hello World!</p>
+  </section>
+  <!-- end second section (text-shadow) -->
+
+  <!-- start third section (gradients) -->
   <section id="section-gradients">
     <h2>Gradients</h2>
     <div>
@@ -25,15 +42,9 @@
       <div class="box conic"></div>
     </div>
   </section>
-  <section id="section-box-shadow">
-    <h2>Box-shadows</h2>
-    <div class="box shadow"></div>
-    <div class="box shadows"></div>
-  </section>
-  <section id="section-text-shadow">
-    <h2>Text-shadow</h2>
-    <p class="text-shadow">Hello World!</p>
-  </section>
+  <!-- end third section (gradients) -->
+
+  <!-- start fourth section (transitions) -->
   <section id="section-transition">
     <h2>Transition</h2>
     <div>
@@ -46,6 +57,9 @@
       <div class="box radius"></div>
     </div>
   </section>
+  <!-- end fourth section (transitions) -->
+
+  <!-- start fifth section (transform) -->
   <section id="section-transform">
     <h2>Transform</h2>
     <div>
@@ -65,9 +79,13 @@
       <div class="box transform-origin"></div>
     </div>
   </section>
+  <!-- end fifth section (transform) -->
+
+  <!-- start sixth section (animations) -->
   <section id="section-animation">
     <h2>Animations</h2>
   </section>
-</body>
+  <!-- start sixth section (animation) -->
 
+</body>
 </html>
