--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Shadows, gradients &amp; animations</title>
     <link rel="stylesheet" href="./style/style.css" />
   </head>
 
@@ -84,6 +84,9 @@
     <!-- start sixth section (animations) -->
     <section id="section-animation">
       <h2>Animations</h2>
+      <div>
+        <div class="box animations linear"></div>
+      </div>
     </section>
     <!-- start sixth section (animation) -->
   </body>
